--- a/css/Contact.css
+++ b/css/Contact.css
@@ -1,85 +1,28 @@
-/*     -------------------------------menu------------------------------------*/
 
-body {
-    margin: 0;
-    padding: 0;
-}
-
-.Menu {
-    background-color: #6941C6;
-    background-image: image("./Site internet/pexels-paula-128639.jpg");
-    width: 100%;
-    height: 171px;
-    align-items: center;
-    display: flex;
-    justify-content: end;
-}
-
-.logo {
-    width: 130px;
-    height: 130px;
-}
-
-.menu-a {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    justify-items: end;
-    padding-left: 86px;
-    padding-right: 86px;
-    width: 100%;
-}
-
-
-.menu-a a {
-    display: grid;
-    text-decoration: none;
-    color: white;
-    font-size: 30px;
-
-}
-
-.container {
-    display: grid;
-    column-gap: 80px;
-}
-
-/*--------------------------------------image accueil------------------------------*/
-
-.image_bois_Accueil {
-    width: 100%;
-    display: grid;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    color: white;
-    font-size: 70px;
-
-}
-
-.image_bois {
-    width: 100%;
-    height: 1300px;
-}
-
-.Accueil {
-    position: absolute;
-    text-align: center;
-    r
-}
 
 /*--------------------------------------interface contacte---------------*/
 
-.content {
+.contact {
+    margin: 3%;
+
+
+
+}
+
+.Google {
+    
+}
+
+.container {
     width: 50%;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    padding-right: 1fr;
-    padding-left: 1fr;
-    background-color: white;
+    margin-top: 5%;
+    margin-left: 25%;
+    margin-right: 25%;
+
     border-radius: 50px;
-    overflow: hidden;
-    border: 1px black solide;
+    border: 1px solid #000;
+    background: var(--neutral-n-0, #FFF);
+    box-shadow: 0px 141px 200px -80px rgba(25, 58, 75, 0.30);
 }
 
 form {
@@ -96,7 +39,6 @@ input[type="tel"],
 input[type="email"],
 textarea {
     width: 90%;
-    margin: 2%;
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 1em;
@@ -107,7 +49,6 @@ button {
     background-color: #0982FE;
     color: white;
     font-size: 14px;
-    padding: 10px 20px;
     border: none;
     border-radius: 10px;
 }
