--- a/css/connexion.css
+++ b/css/connexion.css
@@ -1,68 +1,94 @@
-.connexion_slide {
-    margin: 20%;
-    display: flex;
-    flex-direction: column;
+.container {
+    color: black;
+    font-family: Jura, serif;
+    font-size: 1.3vw;
+    border-radius: 0px;
+    margin-left: 0%;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
-
+.all {
+    display: flex;
+    justify-content: space-between;
+}
 
 
 .Button_Facebook {
-    width: 15%;
+    display: flex;
+    justify-content: space-between;
+    margin: 2%;
     background-color: #C4C4C4;
     border-radius: 69px;
+    text-align: center;
+}
+
+.logofacebook {
+    padding-left: 4%;
+    padding-top: 4.85%;
+}
+
+
+.txtfacebook {
+
+    margin: 9%;
+    padding-right: 12%;
+}
+
+.txtgoogle {
+    margin: 9%;
+    padding-right: 16%;
+}
+
+.design {
+    height: 65vh;
+    background-color: #6941C6;
+    margin-left: 20%;
+    margin-top: 5%;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.design img {
+    margin-top: 20%;
+}
+
+.continue_w {
+    text-align: center;
+}
+
+input[type=email] {
+    width: 100%;
+    padding: 1%;
+    border-radius: 5px;
+    font-size: 1.6vw;
+    box-sizing: border-box;
     margin-top: 2%;
-    text-decoration: none;
+}
+
+input[type=password] {
+    width: 100%;
+    padding: 1%;
+    border-radius: 5px;
+    font-size: 1.6vw;
+    box-sizing: border-box;
+    margin-top: 2%;
+}
+
+#conditions {
+    font-size: 1vw;
+}
+
+input[type=submit] {
+    background-color: #C4C4C4;
+    display: block;
+    font-size: 1.65vw;
+    font-family: Jura, serif;
+    padding: 1%;
+    border-radius: 10px;
+    width: 100%;
     color: black;
-    display: flex;
-    text-justify: center;
-    align-items: center;
-    padding-left: 0.1%;
+    border: none;
+    cursor: pointer;
 }
 
-.Button_Google {
-    width: 15%;
-    background-color: #C4C4C4;
-    border-radius: 69px;
-    margin-top: 2%;
-    padding-left: 0.1%;
-    text-justify: center;
-    display: flex;
-    align-items: center;
-}
-
-.texte_with_facebook {
-    padding-left: 2em;
-}
-.texte_with_google {
-    padding-left: 2em;
-}
-
-.logo_google {
-    width: 100px;
-}
-
-
-
-
-
-
-
-.contract_termes input[type="checkbox"] {
-    margin-right: 10px;
-}
-
-.contract_termes {
-    display: flex;
-    align-items: center;
-}
-
-
-
-
-
-
-
-
-
-/* <div style="width: 510px; height: 103px; background: #C4C4C4; border-radius: 69px"></div> */
